--- a/ludo/style.css
+++ b/ludo/style.css
@@ -11,7 +11,7 @@
 
     height: 450px;
     width: 100%;
-    background-image: ('./ludo-bg.jpg');
+    background-image: url('./ludo-bg.jpg');
     background-size: contain;
     position: relative;
 }
